<resources>
    <string name="app_name">Leafy</string>

    <string name="ingresar">Ingresar</string>

    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>

    <string name="guardados">Guardados</string>
    <string name="crear_publicacion">Crear Publicación</string>
    <string name="mis_plantas">Mis Plantas</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="guardar_cambios">Guardar los cambios</string>
    <string name="mis_publicaciones">Mis Publicaciones</string>

    <string name="registro">Registro</string>
    <string name="registro_subrayado"><u>Registro</u></string>
    <string name="registrar">Registrar</string>
    <string name="Ingrese_su_correo">Ingrese su correo</string>
    <string name="Ingrese_su_contraseña">Ingrese su contraseña</string>
    <string name="exemplo_correo_hint">ejemplo@algo.com</string>
    <string name="ejemplo_contraseña_hint">8 letras mínimo, A-z, 0-9</string>
    <string name="repetir_contraseña_hint">Volver a escribir la misma contraseña</string>
    <string name="algo_hint">Algo</string>

    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="tipo_de_planta">Tipo de planta</string>
    <string name="borrador">Borrador</string>
    <string name="publicar">Publicar</string>
    <string name="publicado">Publicado</string>
    <string name="ingrese_titulo">Ingrese un título</string>

    <string name="Cambiar_imagen"><u>Cambiar Imagen</u>.</string>
    <string name="subir_imagen"><u>Subir Imagen</u>.</string>
    <string name="Horario_planta">Horario para regar planta</string>
    <string name="guardar">Guardar</string>
    <string name="agregar_planta">Agregar Planta</string>

    <string name="Nombre_del_autor"><u>Nombre del Autor</u>.</string>

    <string name="Permission_denied">Permission denied</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>