<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentEditarPerfil" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo2"

                >

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Cambiar_imagen"
                    android:textColor="@color/leafy_letras"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView10" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/nombre"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:hint="@string/algo_hint"
                    android:inputType="textPersonName"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textColorHint="@color/leafy_letras_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/apellido"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:hint="@string/algo_hint"
                    android:inputType="textPersonName"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textColorHint="@color/leafy_letras_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/contraseña"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPassword2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:hint="@string/Ingrese_su_contraseña"
                    android:inputType="textPassword"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textColorHint="@color/leafy_letras_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/repetir_contraseña"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword4"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPassword4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:hint="@string/repetir_contraseña_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/leafy_letras_oscuro"
                    android:textColorHint="@color/leafy_letras_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="120dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/leafy_letras"
                    android:text="@string/editar_perfil"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>