<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leafy_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCorreo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"

        android:layout_marginEnd="40dp"

        android:background="?attr/editTextBackground"

        android:backgroundTint="@color/black"
        android:foregroundTint="@color/black_hint"
        android:textColorHint="@color/leafy_letras_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/txtCorreo"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:backgroundTintMode="screen"
            android:ems="10"
            android:hint="@string/Ingrese_su_correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/leafy_letras_oscuro"
            android:textColorHint="@color/leafy_letras_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"

        android:layout_marginEnd="40dp"

        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/black"
        android:foregroundTint="@color/black_hint"
        android:textColorHint="@color/leafy_letras_hint"
        app:endIconCheckable="true"
        app:endIconContentDescription="show text"
        app:endIconDrawable="@drawable/ic_remove_green_eye_24"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/leafy_letras_oscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCorreo">

        <EditText
            android:id="@+id/txtContraseña"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:backgroundTintMode="screen"
            android:ems="10"
            android:hint="@string/Ingrese_su_contraseña"
            android:inputType="textPassword"
            android:textColor="@color/leafy_letras_oscuro"
            android:textColorHint="@color/leafy_letras_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/leafy_letras"
        android:text="@string/ingresar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

    <TextView
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registro_subrayado"
        android:textColor="@color/leafy_letras_oscuro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/leafy_letras_oscuro"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />



</androidx.constraintlayout.widget.ConstraintLayout>

